--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,15 +11,15 @@ import 'aos/dist/aos.css';
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content="Somos una compañía especializada en marketing, ventas & tecnología." />
 		<meta name="robots" content="index, follow" />
-		<meta name="keywords" content="marketing, ventas, tecnología, coming soon, Dugalu" />
+		<meta name="keywords" content="marketing, ventas, tecnología, Dugalu" />
 		<meta name="author" content="Dugalu" />
 
-		<meta property="og:title" content="Dugalu - Coming Soon" />
+		<meta property="og:title" content="Dugalu - Marketing, más ventas, más tecnología" />
 		<meta property="og:description" content="Somos una compañía especializada en marketing, ventas & tecnología." />
 		<meta property="og:image" content="https://dugalu.vercel.app/favicon.png" />
 		<meta property="og:type" content="website" />
 		
-		<title>Dugalu - Coming Soon</title>
+		<title>Dugalu - Marketing, más ventas, más tecnología</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
