--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -188,8 +188,8 @@ import Carousel from './Carousel.astro';
 <div class="black-line"/>
 
 <div id="whatsapp-button">
-  <a href="https://w.app/Yz2XHI" target="_blank" rel="noopener noreferrer">
+  <a href="https://wa.me/573025639562?text=¡Hola!%20Quisiera%20más%20información" target="_blank" rel="noopener noreferrer">
     <img src={whatsapp.src} alt="Chat with us on WhatsApp" />
   </a>
-  <span class="tooltip">¿Necesitas ayuda?</span>
+  <span class="tooltip">Contáctanos ahora 👉🏻</span>
 </div>
