Update phone number and WhatsApp link format; enhance link styles for consistency

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -161,7 +161,7 @@ import Carousel from './Carousel.astro';
             <span>Escríbenos: </span>conecta@dugalu.com
           </div>
           <div class="item">
-            <span>Teléfono: </span>+573107967925
+            <span>Teléfono: </span>+573025639562
           </div>
         </div>
         <div class="sec">
@@ -188,7 +188,7 @@ import Carousel from './Carousel.astro';
 <div class="black-line"/>
 
 <div id="whatsapp-button">
-  <a href="https://wa.me/573025639562?text=¡Hola!%20Quisiera%20más%20información" target="_blank" rel="noopener noreferrer">
+  <a href="https://web.whatsapp.com/send?phone=573025639562&text=¡Hola!%20Quisiera%20más%20información" target="_blank" rel="noopener noreferrer">
     <img src={whatsapp.src} alt="Chat with us on WhatsApp" />
   </a>
   <span class="tooltip">Contáctanos ahora 👉🏻</span>
