--- a/src/styles/Welcome.scss
+++ b/src/styles/Welcome.scss
@@ -16,6 +16,18 @@ p {
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:visited,
+a:focus,
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
 header {
   background-color: $primary-color;
   height: 6vh;
