--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -188,8 +188,20 @@ import Carousel from './Carousel.astro';
 <div class="black-line"/>
 
 <div id="whatsapp-button">
-  <a href="https://web.whatsapp.com/send?phone=573025639562&text=¡Hola!%20Quisiera%20más%20información" target="_blank" rel="noopener noreferrer">
+  <a id="whatsapp-link" href="#" target="_blank" rel="noopener noreferrer">
     <img src={whatsapp.src} alt="Chat with us on WhatsApp" />
   </a>
   <span class="tooltip">Contáctanos ahora 👉🏻</span>
 </div>
+
+<script>
+  const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+
+  const whatsappLink = document.getElementById('whatsapp-link');
+
+  if (isMobile) {
+    whatsappLink.href = 'https://wa.me/573025639562?text=¡Hola!%20Quisiera%20más%20información';
+  } else {
+    whatsappLink.href = 'https://web.whatsapp.com/send?phone=573025639562&text=¡Hola!%20Quisiera%20más%20información';
+  }
+</script>
