Update meta description for clarity and conciseness

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,13 +9,13 @@ import 'aos/dist/aos.css';
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
-		<meta name="description" content="Somos una compañía especializada en marketing, ventas & tecnología." />
+		<meta name="description" content="Marketing + Ventas + Tecnología" />
 		<meta name="robots" content="index, follow" />
 		<meta name="keywords" content="marketing, ventas, tecnología, Dugalu" />
 		<meta name="author" content="Dugalu" />
 
 		<meta property="og:title" content="Dugalu - Marketing, más ventas, más tecnología" />
-		<meta property="og:description" content="Somos una compañía especializada en marketing, ventas & tecnología." />
+		<meta property="og:description" content="Marketing + Ventas + Tecnología" />
 		<meta property="og:image" content="https://dugalu.vercel.app/favicon.png" />
 		<meta property="og:type" content="website" />
 		
