--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -187,12 +187,12 @@ import Carousel from './Carousel.astro';
 </footer>
 <div class="black-line"/>
 
-<div id="whatsapp-button">
-  <a id="whatsapp-link" href="#" target="_blank" rel="noopener noreferrer">
+<a id="whatsapp-link" href="#" target="_blank" rel="noopener noreferrer">
+  <div id="whatsapp-button">
     <img src={whatsapp.src} alt="Chat with us on WhatsApp" />
-  </a>
-  <span class="tooltip">Contáctanos ahora 👉🏻</span>
-</div>
+    <span class="tooltip">¡Hola! Estamos aquí para ayudarte 👉🏻</span>
+  </div>
+</a>
 
 <script>
   const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
