--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -19,6 +19,7 @@ import sales from '../assets/videos/sales.mp4';
 import marketing from '../assets/videos/marketing.mp4';
 import technology from '../assets/videos/technology.mp4';
 import Carousel from './Carousel.astro';
+import Modal from './Modal.astro';
 ---
 
 <header>
@@ -140,8 +141,18 @@ import Carousel from './Carousel.astro';
       <img data-aos="fade-up" data-aos-delay="400" src={macarena.src} alt="Macarena" />
     </div>
     <Carousel images={[manuelita, segurosMundial, dinant, adea, detektor, indumil, prolibu, macarena]}/>
+    <div class="buttons-container">
+      <a id="whatsapp-link" class="btn pink-btn" href="#" target="_blank" rel="noopener noreferrer">
+        Quiero ser parte
+      </a>
+      <button class="btn white-btn" id="open-modal">
+        Ver más 
+      </button>
+    </div>
   </div>
 </div>
+
+<Modal/>
 
 <footer>
   <video id="background-video-3" autoplay loop muted playsinline preload="auto">
